--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 .idea/
 .vscode/
 __pycache__/
-build/
-dist/
-*.egg-info/
-test*
+.pytest_cache/
+*.log
 .venv
+.coverage
+.env
+.uv/
+.ruff_cache/
+.DS_store
+test.*
