--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -16,14 +16,12 @@ jobs:
       TEST_SRN: ${{ secrets.TEST_SRN }}
       TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
       TEST_BRANCH: ${{ secrets.TEST_BRANCH }}
-      TEST_BRANCH_SHORT_CODE: ${{ secrets.TEST_BRANCH_SHORT_CODE }}
       TEST_PROGRAM: ${{ secrets.TEST_PROGRAM }}
       TEST_SEMESTER: ${{ secrets.TEST_SEMESTER }}
       TEST_SECTION: ${{ secrets.TEST_SECTION }}
       TEST_EMAIL: ${{ secrets.TEST_EMAIL }}
       TEST_PHONE: ${{ secrets.TEST_PHONE }}
       TEST_CAMPUS: ${{ secrets.TEST_CAMPUS }}
-      TEST_CAMPUS_CODE: ${{ secrets.TEST_CAMPUS_CODE }}
 
     steps:
       - uses: actions/checkout@v3
@@ -36,8 +34,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pre-commit pytest pytest-cov httpx python-dotenv pytest-asyncio
+          pip install .
+          pip install .[tests]
 
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
