--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,18 @@
 [project]
 name = "pesuacademy"
 version = "1.0.0"
-description = "Add your description here"
+description = "Super-fast and lightweight Python wrapper for PESU Academy."
 readme = "README.md"
-requires-python = ">=3.12"
-license = { text = "MIT" }
+readme-content-type = "text/markdown"
+requires-python = ">=3.11"
+license = { file = "LICENSE" }
 authors = [
     { name = "Aditeya Baral", email = "aditeya.baral@gmail.com" },
     { name = "Samarth Mohan", email = "samarth.lina@gmail.com" }
 ]
+urls = { Homepage = "https://github.com/pesu-dev/pesuacademy", Repository = "https://github.com/pesu-dev/pesuacademy", Documentation = "https://github.com/pesu-dev/pesuacademy#readme", BugTracker = "https://github.com/pesu-dev/pesuacademy/issues" }
+keywords = ["pesu", "pesu academy", "python client", "wrapper"]
+
 dependencies = [
     "beautifulsoup4>=4.13.4",
     "httpx>=0.28.1",
@@ -17,8 +21,20 @@ dependencies = [
     "selectolax>=0.3.32",
 ]
 
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent"
+]
+
 [project.optional-dependencies]
-pre-commit = [
+tests = [
     "pre-commit>=4.2.0",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
@@ -31,7 +47,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = ["pesuacademy"]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
