--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme myst_parser
-          pip install -r requirements.txt
+          pip install .[docs]
 
       - name: Build HTML docs
         run: make -C docs html
